// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for incomingConnection = single 1`] = `
<React.Fragment>
  <div
    className="centered-line-wrapper"
  >
    <div
      className="wrapper-top-label"
    >
      <div>
        text
      </div>
    </div>
    <div
      className="wrapper-bottom-spacing"
      style={
        Object {
          "minHeight": "30px",
        }
      }
    />
  </div>
</React.Fragment>
`;

exports[`renders correctly with minimal/default props 1`] = `
<Fragment>
  <div
    className="centered-line-wrapper"
  >
    <div
      className="wrapper-top-label"
    >
      <div>
        label
      </div>
    </div>
    <div
      className="wrapper-bottom-spacing"
    />
  </div>
</Fragment>
`;
